--- a/business/templates/index.html
+++ b/business/templates/index.html
@@ -12,7 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+    {% load staticfiles %}
   </head>
 
   <body>
